--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://195.248.242.20/hyper/depth-zero" crossorigin>
 
     <link id="app-css" rel="stylesheet" href="./assets/css/style.css">
-    <title>Ocean Depth Zero</title>
+    <title>Ocean - Depth Zero</title>
 
     <base href="https://195.248.242.20/hyper/depth-zero/" target="_blank" />
 
