--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="twitter:description" content="Ocean Depth Zero">
     <meta name="twitter:image" content="./assets/img/bg.webp">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" href="./assets/img/gif.gif">
+    <link rel="icon" href="./assets/img/animation.gif">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" href="">
+    <!-- <link rel="apple-touch-icon" href=""> -->
     <link rel="apple-touch-icon" sizes="96x96" href="./assets/img/bg.webp">
     <link rel="apple-touch-icon" sizes="128x128" href="./assets/img/bg.webp">
     <link rel="apple-touch-icon" sizes="192x192" href="./assets/img/bg.webp">
