before publish - base

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Ocean Depth Zero">
     <meta property="og:site_name" content="Ocean Depth Zero">
-    <meta property="og:url" content="https://195.248.242.20/hyper/depth-zero">
+    <meta property="og:url" content="https://depth-zero.netlify.app/">
     <meta property="og:title" content="Ocean Depth Zero">
     <meta property="og:description" content="Ocean Depth Zero">
     <meta property="og:image" content="./assets/img/bg.webp">
@@ -21,13 +21,13 @@
     <link rel="apple-touch-icon" sizes="96x96" href="./assets/img/bg.webp">
     <link rel="apple-touch-icon" sizes="128x128" href="./assets/img/bg.webp">
     <link rel="apple-touch-icon" sizes="192x192" href="./assets/img/bg.webp">
-    <link rel="canonical" href="https://195.248.242.20/hyper/depth-zero" />
-    <link rel="preconnect" href="https://195.248.242.20/hyper/depth-zero" crossorigin>
+    <link rel="canonical" href="https://depth-zero.netlify.app/" />
+    <link rel="preconnect" href="https://depth-zero.netlify.app/" crossorigin>
 
     <link id="app-css" rel="stylesheet" href="./assets/css/style.css">
     <title>Ocean - Depth Zero</title>
 
-    <base href="https://195.248.242.20/hyper/depth-zero/" target="_blank" />
+    <base href="/" target="_blank" />
 
 </head>
 
