--- a/index.html
+++ b/index.html
@@ -2,17 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>The Fundamentals</title>
+    <meta name="description" content="FED24STO Fundamentals Weeks Overview - What I've learned so far">
+
+    <meta property="og:site_name" content="Fundamentals Weeks">
+    <meta property="og:url" content="https://depth-zero.netlify.app/">
+    <meta property="og:title" content="Fundamentals Weeks">
+    <meta property="og:description" content="Fundamentals Weeks">
+    <meta property="og:image" content="./assets/img/bg.webp">
+
+    <meta name="twitter:site" content="@desmati">
+    <meta name="twitter:title" content="Fundamentals Weeks">
+    <meta name="twitter:description" content="Fundamentals Weeks">
+    <meta name="twitter:image" content="./assets/img/bg.webp">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <link rel="apple-touch-icon" href="./assets/img/bg.webp">
+    <link rel="apple-touch-icon" sizes="96x96" href="./assets/img/bg.webp">
+    <link rel="apple-touch-icon" sizes="128x128" href="./assets/img/bg.webp">
+    <link rel="apple-touch-icon" sizes="192x192" href="./assets/img/bg.webp">
+
+    <base href="/" target="_blank" />
+    <link rel="canonical" href="https://depth-zero.netlify.app/" />
+    <link rel="preconnect" href="https://depth-zero.netlify.app/" crossorigin>
+    <link rel="icon" href="./assets/img/animation.gif">
+
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>The Fundamentals</title>
 </head>
 
 <body>
-
-
     <main>
         <section class="section">
             <article>
@@ -37,7 +62,7 @@
         <section class="section">
             <article>
                 <h2>My Cheatsheet</h2>
-                <p><a href="#">What I've learned so far.</a></p>
+                <p><a href="./cheatsheet.html">What I've learned so far.</a></p>
             </article>
         </section>
         <section class="section">
@@ -46,54 +71,11 @@
         </section>
     </main>
     <button title="Click here to remove images. Colors would be more clear.">High Contrast</button>
+
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
     <script src="./assets/js/script.js"></script>
-    <!-- <div>
-        <div class="right-side"></div>
-        <div class="left-side"></div>
-    </div>
-    <header>
-        <nav>
-            <ul>
-                <li><a href='#'>Home</a></li>
-                <li><a href='#'>About</a></li>
-                <li><a href='#'>Blog</a></li>
-                <li><a href='#'>Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
-    <article>
-        <h1>Heading</h1>
-        <section>
-            <h2>Section 1 Heading</h2>
-            <p>
-                Section 1
-            </p>
-            <figure>
-                <img src='./assets/img/logo.jpg' alt='Diagram showing <article>, <section>, and <nav> elements' />
-                <figcaption>New HTML5 semantic elements</figcaption>
-            </figure>
-        </section>
-        <section>
-            <h2>Section 2 Heading</h2>
-            Section 2
-        </section>
-        <section>
-            <h2>Section 3 Heading</h2>
-            Section 3
-        </section>
-    </article>
-    <aside>
-
-    </aside>
-    <footer>
-        <address>
-            Please contact <a href='mailto:troymcclure@example.com'>Troy
-                McClure</a> for questions about this article.
-        </address>
-    </footer> -->
 </body>
 
 </html>
