--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -11,50 +11,58 @@
 </head>
 
 <body>
-    <div>
-        <div class="right-side"></div>
-        <div class="left-side"></div>
-    </div>
-    <header>
-        <nav>
-            <ul>
-                <li><a href='#'>Home</a></li>
-                <li><a href='#'>About</a></li>
-                <li><a href='#'>Blog</a></li>
-                <li><a href='#'>Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
-    <article>
-        <h1>Heading</h1>
-        <section>
-            <h2>Section 1 Heading</h2>
-            <p>
-                Section 1
-            </p>
-            <figure>
-                <img src='./assets/img/logo.jpg' alt='Diagram showing <article>, <section>, and <nav> elements' />
-                <figcaption>New HTML5 semantic elements</figcaption>
-            </figure>
-        </section>
-        <section>
-            <h2>Section 2 Heading</h2>
-            Section 2
-        </section>
-        <section>
-            <h2>Section 3 Heading</h2>
-            Section 3
-        </section>
-    </article>
-    <aside>
+    <div class="container">
+        <div class="sidebar">
+            <nav>
 
-    </aside>
+            </nav>
+        </div>
+        <div class="content">
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href='#'>Home</a></li>
+                        <li><a href='#'>About</a></li>
+                        <li><a href='#'>Blog</a></li>
+                        <li><a href='#'>Sign Up</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <article>
+                <h1>Heading</h1>
+                <section>
+                    <h2>Section 1 Heading</h2>
+                    <p>
+                        Section 1
+                    </p>
+                    <figure>
+                        <img src='./assets/img/logo.jpg'
+                            alt='Diagram showing <article>, <section>, and <nav> elements' />
+                        <figcaption>New HTML5 semantic elements</figcaption>
+                    </figure>
+
+                    <aside>
+
+                    </aside>
+                </section>
+                <section>
+                    <h2>Section 2 Heading</h2>
+                    Section 2
+                </section>
+                <section>
+                    <h2>Section 3 Heading</h2>
+                    Section 3
+                </section>
+            </article>
+        </div>
+    </div>
     <footer>
         <address>
-            Please contact <a href='mailto:troymcclure@example.com'>Troy
-                McClure</a> for questions about this article.
+            Please contact <a href='mailto:desmati@gmail.com'>me</a> for questions about this article.
         </address>
     </footer>
+
+
 
     <script src="./assets/js/cheatsheet.js"></script>
 </body>
