--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
             <article>
             </article>
         </section>
-        <section class="section section-90s">
+        <section class="section section-90s active">
             <article>
-                <h2>Back to the 90s</h2>
-                <p><a href="./depth-zero.html">Visit the website</a></p>
+                <h2>Fundamentals</h2>
+                <p>Presenting the Fundamentals</p>
             </article>
         </section>
-        <section class="section section-video-bg active">
+        <section class="section section-video-bg">
             <video data-testid="video-asset"
                 src="https://media.istockphoto.com/videos/wave-rolls-and-breaks-ocean-wave-rolls-and-breaks-over-the-flat-reef-video-id1356214658"
                 alt="Les vagues roulent et se cassent. Les vagues de l’océan roulent et se brisent sur le fond plat du récif aux Maldives - Film vidéo de Vague libre de droits"
                 controls="" controlslist="nodownload" autoplay loop="loop" muted></video>
             <article>
-                <h2>Fundamentals</h2>
-                <p>Presenting the Fundamentals</p>
+                <h2>Back to the 90s</h2>
+                <p><a href="./depth-zero.html">Visit the website</a></p>
             </article>
         </section>
         <section class="section">
