cheatsheet: desktop layout

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -6,25 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/cheatsheet.css" />
+    <link rel="stylesheet" href="./assets/css/cheatsheet/cheatsheet.css" />
+    <link rel="stylesheet" href="./assets/css/cheatsheet/logo.css" />
+    <link rel="stylesheet" href="./assets/css/cheatsheet/sidebar.css" />
+    <link rel="stylesheet" href="./assets/css/cheatsheet/footer.css" />
+    <link rel="stylesheet" href="./assets/css/cheatsheet/content.css" />
+    <link rel="stylesheet" href="./assets/css/cheatsheet/content-nav.css" />
     <title>Web Design Cheatsheet</title>
 </head>
 
 <body>
     <div class="container">
         <div class="sidebar">
+            <header class="logo">
+                <a href="/cheatsheet.html">
+                    <img src="./assets/img/logo-tp.png">
+                    <h1>Web Design Cheatsheet</h1>
+                </a>
+            </header>
             <nav>
-
+                <h2>Titles</h2>
+                <ul>
+                    <li><a href="">Flex Box</a></li>
+                    <li><a href="">Semantic HTML</a></li>
+                    <li><a href="">Responsive Design</a></li>
+                </ul>
             </nav>
         </div>
         <div class="content">
             <header>
                 <nav>
                     <ul>
-                        <li><a href='#'>Home</a></li>
-                        <li><a href='#'>About</a></li>
-                        <li><a href='#'>Blog</a></li>
-                        <li><a href='#'>Sign Up</a></li>
+                        <li><a href='/cheatsheet.html'>Home</a></li>
+                        <li><a href='/'>Back to main page</a></li>
                     </ul>
                 </nav>
             </header>
@@ -58,7 +72,8 @@
     </div>
     <footer>
         <address>
-            Please contact <a href='mailto:desmati@gmail.com'>me</a> for questions about this article.
+            <a href="http://www.desmati.com">DESMATI.COM</a> - Please contact <a href='mailto:desmati@gmail.com'>me</a>
+            for questions.
         </address>
     </footer>
 
