--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="sidebar">
             <header class="logo">
-                <a href="/cheatsheet.html">
+                <a href="./cheatsheet.html">
                     <img src="./assets/img/logo-tp.png">
                     <h1>Web Design Cheatsheet</h1>
                 </a>
@@ -37,7 +37,7 @@
             <header>
                 <nav>
                     <ul>
-                        <li><a href='/cheatsheet.html'>Home</a></li>
+                        <li><a href='./cheatsheet.html'>Home</a></li>
                         <li><a href='/'>Back to main page</a></li>
                     </ul>
                 </nav>
