--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             </article>
         </section>
         <section class="section section-video-bg">
-            <video data-testid="video-asset"
-                src="https://media.istockphoto.com/videos/wave-rolls-and-breaks-ocean-wave-rolls-and-breaks-over-the-flat-reef-video-id1356214658"
+            <video data-testid="video-asset" src="./assets/media/wave-bg.mp4"
                 alt="Les vagues roulent et se cassent. Les vagues de l’océan roulent et se brisent sur le fond plat du récif aux Maldives - Film vidéo de Vague libre de droits"
                 controls="" controlslist="nodownload" autoplay loop="loop" muted></video>
             <article>
