refactored using pure javascript

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </article>
         </section>
     </main>
-    <button title="Click here to remove images. Colors would be more clear.">High Contrast</button>
+    <button id="btn-contrast" title="Click here to remove images. Colors would be more clear.">High Contrast</button>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
