--- a/depth-zero.html
+++ b/depth-zero.html
@@ -25,6 +25,8 @@
     <link rel="preconnect" href="https://depth-zero.netlify.app/" crossorigin>
 
     <link id="app-css" rel="stylesheet" href="./assets/css/depth-zero.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <title>Ocean - Depth Zero</title>
 
     <base href="/" target="_blank" />
